0.3.5.6
  - (zathor) removed CUVIDServer handling (requires at least DGIndexNV 2020)
  - (zathor) changed DGMultiSource() to DGSource() and DGMultiDecodeNV.dll to DGDecodeNV.dll (requires at least DGIndexNV 2021)

0.3.5.5
  - (sharktooth) [x264] Added --pulldown option plus some various fixes
  - (sharktooth) [x264] Added --colorprim, --transfer and --colormatrix options
  - (sharktooth) [x264] Added --non-deterministic support plus some cosmetic changes

0.3.5.4
  - (sharktooth) [x264] AVCProfile and AVCLevel groupboxes Enable status now depends on the Show Advanced Settings status
  - (sharktooth) [x264] Moved Profile and Level to the main tab and made some more space for more VUI options
  - (sharktooth) [DialogManager] Check the "Use CUVID Server" option status before launching CUVID server

0.3.5.3
  - (sharktooth) [x264ConfigurationPanel] Trigger GenericUpdate() after executing checks on macroblockOptions.SelectIndex change to keep coherency between macroblock options checkboxes and commandline generation
  - (sharktooth) [x264] Added --pic-struct support
  - (sharktooth) [x264] Added --fake-interlaced support
  - (zathor) [x264] old nal-hrd profile values will be migrated

0.3.5.2
  - (sharktooth) [x264] Added nal-hrd complete support and fixed a missing check in the previous commit
  - (sharktooth) [x264] Added open-gop support (requires x264 rev. 1662+)
  - (sharktooth) [x264ConfigurationPanel] Cosmetics and fixes to possible keyint and minkeyint minimum values.
  - (sharktooth) [x264] Added support for "-keyint infinite" option
  - (sharktooth) [xviDEncoder] The Adaptive Quant option now enables VAQ. Commented out the HVS masking command line generation.
  - (sharktooth) [xvidConfigurationPanel] Disabled the HVS masking controls since the current encoder doesn't support them yet.

0.3.5.1
  - (zathor) [FileIndexerWindow] changed caption. Feature request #3019279
  - (zathor) [AudioEncoderInterface] fixed crash if input wav file is locked. Bug #3021693