@@ -1,6 +1,8 @@
 0.3.5.6
   - (zathor) removed CUVIDServer handling (requires at least DGIndexNV 2020)
   - (zathor) changed DGMultiSource() to DGSource() and DGMultiDecodeNV.dll to DGDecodeNV.dll (requires at least DGIndexNV 2021)
+  - (zathor) [VideoUtil] I420 is accepted as avisynth output colorspace
+  - (zathor) [ffmsReader] + [ScriptServer] removed the YV12 colorspace conversion from the FFVideoSource() call
 
 0.3.5.5
   - (sharktooth) [x264] Added --pulldown option plus some various fixes
